unstuck! solved the homepage image issue

--- a/src/components/Directory/styles.scss
+++ b/src/components/Directory/styles.scss
@@ -1,4 +1,5 @@
 .directory{
+    height: 100%;
     .item{
         width: 50%;
         height: 100%;
